[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/fonts/font_square_mini.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/title/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://scenes/title/title_bg.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/ui_font_small.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
thickness = 2

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.49835
margin_bottom = -1.49829
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainCont" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -643.0
margin_top = -245.0
margin_right = 643.0
margin_bottom = 245.0
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="MainCont"]
margin_left = 118.0
margin_right = 898.0
margin_bottom = 490.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTitle" type="Label" parent="MainCont/Title"]
margin_top = 42.0
margin_right = 780.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 1 )
text = "S A L T Y F R O N T"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MainCont/Title"]
margin_top = 166.0
margin_right = 780.0
margin_bottom = 170.0
custom_styles/separator = SubResource( 2 )

[node name="SubTitle" type="Label" parent="MainCont/Title"]
margin_top = 174.0
margin_right = 780.0
margin_bottom = 254.0
custom_fonts/font = SubResource( 3 )
text = "GET PAID OR GET SMOKED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainGame" type="Button" parent="MainCont/Title"]
margin_top = 258.0
margin_right = 780.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 4 )
text = "RUN GAME"

[node name="TestRoom" type="Button" parent="MainCont/Title"]
margin_top = 308.0
margin_right = 780.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 5 )
text = "TEST ROOM"

[node name="Exit" type="Button" parent="MainCont/Title"]
margin_top = 358.0
margin_right = 780.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 6 )
text = "EXIT"

[node name="Countdown" type="Label" parent="MainCont/Title"]
margin_top = 408.0
margin_right = 780.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 7 )
text = "Auto-start in 30 seconds"
align = 1

[node name="Settings" type="VBoxContainer" parent="MainCont"]
margin_left = 930.0
margin_right = 1167.0
margin_bottom = 490.0
alignment = 1

[node name="Label" type="Label" parent="MainCont/Settings"]
margin_top = 130.0
margin_right = 237.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 8 )
text = "Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="MainCont/Settings"]
margin_top = 194.0
margin_right = 237.0
margin_bottom = 198.0
custom_styles/separator = SubResource( 2 )

[node name="Offline" type="CheckButton" parent="MainCont/Settings"]
margin_top = 202.0
margin_right = 237.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
pressed = true
text = "Offline Mode"

[node name="Channel" type="OptionButton" parent="MainCont/Settings"]
margin_top = 246.0
margin_right = 237.0
margin_bottom = 271.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Channel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FastWait" type="CheckButton" parent="MainCont/Settings"]
margin_top = 275.0
margin_right = 237.0
margin_bottom = 315.0
custom_fonts/font = ExtResource( 4 )
pressed = true
text = "Fast Wait"

[node name="FastCombat" type="CheckButton" parent="MainCont/Settings"]
margin_top = 319.0
margin_right = 237.0
margin_bottom = 359.0
custom_fonts/font = ExtResource( 4 )
pressed = true
text = "Fast Combat"

[connection signal="pressed" from="MainCont/Title/MainGame" to="." method="_on_MainGame_pressed"]
[connection signal="pressed" from="MainCont/Title/TestRoom" to="." method="_on_TestRoom_pressed"]
[connection signal="pressed" from="MainCont/Title/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="MainCont/Settings/Offline" to="." method="_on_Offline_toggled"]
[connection signal="toggled" from="MainCont/Settings/FastWait" to="." method="_on_FastWait_toggled"]
[connection signal="toggled" from="MainCont/Settings/FastCombat" to="." method="_on_FastCombat_toggled"]
